# Docling-Raptor-DeepEval

./: .gitignore  main.py  pyproject.toml
database/: litedb_service.py
ingestion/: document_ingestion_service.py
models/: henrydoc.py
parse/: parse_service.py
utils/: loader.py  splitter.py
vector_store/: vector_store_service.py
